@@ -3,8 +3,10 @@
 == Version 0.5.12 (SVN)
 relnotes
 
+* Remove RSpec on Rails files from backtrace.
 * All of RSpec's own tests run successfully after translation with test2spec.
 * Added --verbose mode for test2spec - useful for debugging when classes fail to translate.
+* Output of various formatters is now flushed - to get more continuous output.
 
 == Version 0.5.11
 This release makes test2spec usable with Rails (with some manual steps). 
